# g2-claude-remote

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  app.json  index.html  package-lock.json  package.json  vite.config.ts
scripts/: check-versions.mjs  prepack.mjs
server/: README.md  pyproject.toml  rc_bridge.py
server/claude_remote_bridge/: __init__.py  bridge.py  wordlist.py
src/: config.ts  glasses.ts  main.ts  ui.ts
src/events/: format.ts  log.ts
src/input/: compose.ts  voice.ts
src/rc/: client.ts  stream.ts  types.ts
src/stt/: deepgram.ts
