[project]
name = "claude-remote-bridge"
dynamic = ["version"]
description = "Bridge server for Claude Remote — steer Claude Code Remote Control sessions from Even Realities G2 glasses"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aniket Chadalavada" }]
keywords = ["claude", "claude-code", "remote-control", "even-realities", "g2", "smart-glasses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
# NOTE: a direct git URL keeps `uvx --from git+…#subdirectory=server` fully
# self-contained with no PyPI publishing required. PyPI itself rejects direct
# URL dependencies — to publish there, release claude-rc-api first and change
# this to a version specifier (e.g. "claude-rc-api>=0.1").
dependencies = [
    "claude-rc-api @ git+https://github.com/ThatCrispyToast/claude-rc-api",
]

[project.urls]
Repository = "https://github.com/ThatCrispyToast/g2-claude-remote"
Issues = "https://github.com/ThatCrispyToast/g2-claude-remote/issues"

[project.scripts]
claude-remote-bridge = "claude_remote_bridge.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "claude_remote_bridge/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["claude_remote_bridge"]
